--- a/server/pdfTemplates/vrl/lr.html
+++ b/server/pdfTemplates/vrl/lr.html
@@ -170,9 +170,9 @@
         </td>
         <td class="insurance">
             INSURANCE:
-            <br> The customer ha stated that
+            <br> The customer has stated that
             <br> They have insured the consignment
-            <br> They have not inured the consignment
+            <br> They have not insured the consignment
             <br> Ins.Co:
             <br> Policy No:Date:
             <br> Amount:
@@ -224,7 +224,7 @@
         <tr>
             <th>No.of Packages</th>
             <th>Method of Packing</th>
-            <th>Description(Said to cotain)</th>
+            <th>Description(Said to contain)</th>
             <th>Party's Invoice/Challan No.</th>
 
             <th colspan="2">
@@ -274,7 +274,7 @@
             <td></td>
             <td></td>
             <td style="border: 1px solid black">Hamali</td>
-            <td style="border: 1px solid black"></td>
+            <td style="border: 1px solid black">{{lrDetails.hamali}}</td>
             <td style="border: 1px solid black"></td>
         </tr>
         <tr>
@@ -464,3 +464,9 @@
             <td>
                 14. The consignor and consignee are liable for any damage or loss
                 occured during loading or unloading respectively for men, materials
+            </td>
+        </tr>
+    </table>
+</div>
+</body>
+</html>
