--- a/server/pdfTemplates/vrl/lr.html
+++ b/server/pdfTemplates/vrl/lr.html
@@ -135,8 +135,22 @@
     </div>
     <H3 style="font-size: 10px;padding-left: 150px">TRANSPORTERS & CONTRACTORS</H3>
 </td>
+<!--
 <td style="padding-left: 60px;text-align: right">Cell:9848020343,
     <br>9666695159</td>
+-->
+<td style="padding-left: 60px">
+    <table>
+        <tr>
+            <td>Cell:</td>
+            <td>9848020343</td>
+        </tr>
+        <tr>
+            <td></td>
+            <td colspan="">9666695159</td>
+        </tr>
+    </table>
+</td>
 </tr>
 </table>
 </div>
@@ -186,7 +200,7 @@
         <td>
 
             <div class="address">
-                Office Address:
+                <b>Office Address:</b>
                 <br> 1st Floor,
                 <br> F-4,
                 <br> Srusty Residency,
@@ -195,29 +209,32 @@
                 <br> Vechile No:
                 <br>
             </div>
+
         </td>
+
     </tr>
     <tr>
-        <td>
+        <td colspan="3">
             <div class="line"></div>
             <div class="line"></div>
             <div style="font-size: 10px">Consigner's Name & Address:<u>{{lrDetails.partyName}}</u></div>
         </td>
-        <td>
+        <td >
             <div class="gap5"></div>
             <div class="gap6"></div>
-            <div style="font-size: 10px">From:<u>{{lrDetails.from}}</u></div>
+            <div style="font-size: 11px">From:<u>{{lrDetails.from}}</u></div>
         </td>
     </tr>
     <tr>
-        <td>
+        <td colspan="3">
             <div style="font-size: 10px">Consignee's Name & Address:<u>{{lrDetails.consigneeBanksNameAndAddress}}</u></div>
             <div></div>
             <div></div>
         </td>
         <td>
-            <div style="font-size: 10px">To:<u>{{lrDetails.to}}</u></div>
+            <div style="font-size: 11px">To:<u>{{lrDetails.to}}</u></div>
         </td>
+
     </tr>
     <table class="t1">
 
@@ -301,7 +318,7 @@
             <td style="border: 1px solid black"></td>
 
         </tr>
-        <tr>
+       <!-- <tr>
             <td></td>
             <td></td>
             <td></td>
@@ -324,7 +341,7 @@
             <td style="border: 1px solid black"></td>
             <td style="border: 1px solid black"></td>
 
-        </tr>
+        </tr>-->
         <tr>
             <td></td>
             <td></td>
