--- a/server/pdfTemplates/invoice.html
+++ b/server/pdfTemplates/invoice.html
@@ -29,14 +29,14 @@
         <td colspan="2" style="text-align: center"><span style="font-size: 15px"><b>TRANSPORT INVOICE</b></span></td>
     </tr>
     <tr>
-        <td width="50%">
+        <td width="50%" style="font-size: 12px">
             <b>To<br>
                 {{partyName}}</b>
             <br>{{partyAddress}}<br>
             GST NO:{{gstNo}}<br>
             PAN NO:<br>
         </td>
-        <td width="50%">
+        <td width="50%" style="font-size: 12px">
             Date:03/08/2018<br>
             Invoice NO:VL/Transport/19-00834<br>
             Job No:<br>
@@ -45,7 +45,7 @@
         </td>
     </tr>
 </table>
-<table style="width:100%">
+<table style="width:100%;font-size:12px">
     <tr>
         <th style="padding-right:180px">Shipper InVoice No:0062</th>
         <th>Rate/Trip</th>
@@ -54,7 +54,7 @@
     </tr>
     <tr>
         <td>
-            <table width="50%" style="text-align: center;margin-left:15px">
+            <table width="50%" style="text-align: center;margin-left:15px;font-size:10px">
                 <tr>
                     <th>FROM</th>
                     <th>LoadedOn</th>
@@ -74,8 +74,8 @@
             <p>CGST@{{accountDetails.cgst}}%</p>
             <p>SGST@{{accountDetails.sgst}}%</p>
         </td>
-        <td style="text-align:center;padding-bottom:200px">{{invoiceDetails.rate}}</td>
-        <td style="text-align:center;padding-bottom:200px">{{invoiceDetails.quantity}}</td>
+        <td style="text-align:center;padding-bottom: 165px">{{invoiceDetails.rate}}</td>
+        <td style="text-align:center;padding-bottom: 165px">{{invoiceDetails.quantity}}</td>
         <td style="text-align:center">{{invoiceDetails.totalAmount}}
             <p style="padding-top:100px">{{cgstAmount}}</p>
             <p>{{sgstAmount}}</p>
@@ -94,14 +94,14 @@
                 who pays the bill under RCM<br>
                 All disputes are subject to Guntur Jurisdiction<br>
             </p>
-            <aside style="text-align: right; font-size: 16px;padding-right: 10px">for VANGALA LOGISTICS</aside>
+            <aside style="text-align: right; font-size: 14px;padding-right: 10px">for VANGALA LOGISTICS</aside>
             <b style="font-size:12px">Bank Details:</b><br>
             <p style="font-size:7px">
                 <b>Beneficiary:</b>Vangala Logistics<br>
                 <b>Bank:</b>HDFC Bank<br>
                 <b>Beneficiary Account No:</b>50200029925957<br>
                 <b>IFSC Code:</b>HDFC0004370
-                <aside style="text-align: right; font-size: 12px;padding-right: 30px">MANAGING PARTNETR</aside>
+                <aside style="font-size: 12px;text-align: right;padding-right: 10px">MANAGING PARTNER</aside>
             <!--<b style="font-size:12px">Bank Details:</b><br>-->
             <!--<p style="font-size:7px">
                 <b>Beneficiary:</b>Vangala Logistics<br>
