--- a/server/pdfTemplates/vrl/invoice.html
+++ b/server/pdfTemplates/vrl/invoice.html
@@ -102,7 +102,7 @@
                 </tr>
                 {{#each invoiceDetails.trip}}
                 <tr>
-                    <td style="height: 0px; border-bottom: none; border-top: none;">1.</td>
+                    <td style="height: 0px; border-bottom: none; border-top: none;">{{this.index}}</td>
                     <td style="border-bottom: none;border-top:none">{{this.date}}</td>
                     <td style="border-bottom: none;border-top:none">{{this.vehicleNo}}</td>
                     <td style="border-bottom: none;border-top:none">{{this.from}}</td>
