--- a/server/pdfTemplates/lr.html
+++ b/server/pdfTemplates/lr.html
@@ -126,22 +126,22 @@
                         <td>&nbsp;</td>
                         <td >
                             <p>Company
-                                <span style="border-bottom:1px solid #333;">(data...)</span>
+                                <span style="border-bottom:1px solid #333;"></span>
                             </p>
                             <p>
                                         <span>Policy No.
-                                            <span style="border-bottom:1px solid #333;">(data...)</span>
+                                            <span style="border-bottom:1px solid #333;"></span>
                                         </span>
                                 <span>Date
-                                            <span style="border-bottom:1px solid #333;">(data...)</span>
+                                            <span style="border-bottom:1px solid #333;"></span>
                                         </span>
                             </p>
                             <p>
                                         <span>Amount
-                                            <span style="border-bottom:1px solid #333;">(data...)</span>
+                                            <span style="border-bottom:1px solid #333;"></span>
                                         </span>
                                 <span>Risk
-                                            <span style="border-bottom:1px solid #333;">(data...)</span>
+                                            <span style="border-bottom:1px solid #333;"></span>
                                         </span>
                             </p>
                         </td>
@@ -338,7 +338,7 @@
                             <td style="border-right:1px solid #333;padding:2px;">
                                 <B> R.C</B>
                             </td>
-                            <td>(data..)</td>
+                            <td>{{lrDetails.rc}}</td>
                         </tr>
                         <tr style="border-bottom:1px solid #333;">
                             <td style="border-right:1px solid #333;padding:2px;">
