--- a/server/pdfTemplates/anjana/invoice.html
+++ b/server/pdfTemplates/anjana/invoice.html
@@ -126,7 +126,7 @@
 
 
                     <tr >
-                        <td style="text-align: center; font-size: 10px ">{{invoicesCount}}</td>
+                        <td style="text-align: center; font-size: 8px ">{{invoiceNo}}</td>
                         <td>
                             <p style="text-align: center;">{{invoiceDate}}</p>
                         </td>
