--- a/server/pdfTemplates/anjana/invoice.html
+++ b/server/pdfTemplates/anjana/invoice.html
@@ -314,7 +314,7 @@
             <tr>
                 <td style="border:none;">
                     <p style="font-size: 9px">Amount chargeable (in words)</p>
-                    <p style="font-size: 9px"><b>INR:</b></p>
+                    <p style="font-size: 9px"><b>INR:{{invoiceDetails.pdfTotalAmountWords}}</b></p>
                     <p><b>Company's PAN:ABVFS5272J</b></p>
                     <p><b><u> Declaration:</u></b></p>
                     <p><b>Transporter is not liable to pay Goods and Service Tax:</b></p>
