--- a/server/pdfTemplates/anjana/invoice.html
+++ b/server/pdfTemplates/anjana/invoice.html
@@ -249,7 +249,7 @@
                             {{#each invoiceDetails.trip}}
                             <p><b>Vehicle No:{{this.vehicleNo}}</b></p>
                             {{/each}}
-                            <p> Temparature Cargo {{invoiceDetails.temparatureCargo}} </p>
+                            <p> {{invoiceDetails.temparatureCargo}} </p>
                             <p> {{invoiceDetails.pallets}} Pallets</p>
                             {{#each invoiceDetails.trip}}
                             <p>Loading Date:{{this.loadedOn}}</p>
