--- a/server/pdfTemplates/anjana/invoice.html
+++ b/server/pdfTemplates/anjana/invoice.html
@@ -32,7 +32,7 @@
         p {
             text-align: left;
             margin: 0%;
-            font-size: 8PX;
+            font-size: 9PX;
 
         }
 
@@ -79,7 +79,7 @@
                     <p> <a href="srianjanatransport@redifmail.com">srianjanatransport@redifmail.com</a></p>
                     <p> <a href="http://www.srianjanatransport.com">http://www.srianjanatransport.com</a> </p>
                 </th>
-                <th style=" border: none; float: right; padding-left: 300px">
+                <th style=" border: none; float: right; padding-left: 250px">
                     <h3>INVOICE</h3>
                     <h6>RTGS DETAILS:</h6>
                     <p>HDFC BANK LTD.</p>
@@ -93,7 +93,7 @@
         </table>
         <div class="container">
             <div style="margin: 10px 0px;">
-                <table class="table1" style="margin-bottom:-6px !important;">
+                <table class="table1" style="margin-bottom:-6px !important;width: 100%">
                     <thead>
                     <tr>
                         <th colspan="3" style="font-size: 12px">
@@ -110,7 +110,7 @@
                             <small>
                                 <p> Pol No: 506/9, DATTATREYA COLONY,</p>
                                 <p> YELLAMMABANDA, KUKATPALLY, HYDERABAD-72,</p>
-                                <p> PH NO: 9848799473, 9573009187br </p>
+                                <p> PH NO: 9848799473, 9573009187 </p>
                                 <p> GSTIN: 36ABVFS5272J1ZD </p>
                                 <p> Email:<a href="#">srianjanatransport@rediffmail.com</a></p>
                                 <p> <a href="#">http://www.srianjanatransport.com</a></p>
@@ -232,7 +232,7 @@
 
                     </tbody>
                 </table>
-                <table class="table2" style="margin-bottom:-10px !important;">
+                <table class="table2" style="margin-bottom:-10px !important;width: 100%">
                     <thead>
                     <tr>
                         <th style="font-size: 12px">S.No.</th>
@@ -272,7 +272,7 @@
                             <p>Detention Charges</p>
                         </td>
                         <td colspan="">
-                            <table style="width: 102.5%;border-collapse: collapse;margin: -2px;">
+                            <table style="width: 103%;border-collapse: collapse;margin: -2px;">
                                 <tr>
                                     <td>
                                         <p>No. Days</p>
@@ -302,31 +302,28 @@
                 </table>
             </div>
         </div>
-        <table style="border-right:1px solid black;border-left:1px solid black;border-collapse: collapse">
+        <table style="border-right:1px solid black;border-left:1px solid black;border-collapse: collapse;width: 100%">
             <tr>
                 <td style="border:none;">
-                    <p style="font-size: 9px; line-height: 1.8">Amount chargeable (in words)</p>
-                    <p style="font-size: 9px"><b>INR:{{invoiceDetails.pdfTotalAmountWords}}</b></p>
-                    <p><b>Company's PAN:ABVFS5272J</b></p>
+                        <p><b>Company's PAN:ABVFS5272J</b></p>
                     <p><b><u> Declaration:</u></b></p>
-                    <p><b>Transporter is not liable to pay Goods and Service Tax:</b></p>
+                    <p><b>Transporter is not liable to pay Goods and Service Tax:</b></p> </br>
                     <p><b>(1)Goods and Service tax is paid on reverse charge mechanism
-                        under sub-section(4) of</b></p> <p><b>section 9 of Goods and Service Tax Act.</b></p>
-                    <b><p>(2)No deductions from the freight bill will be permitted unless supported by advance debit
-                        note.</b></p>
+                        under sub-section(4) of section 9 of Goods and Service Tax Act.</b></p> </br>
+                    <p><b>(2)No deductions from the freight bill will be permitted unless supported by advance debit
+                        note.</b></p> </br>
                     <p><b>(3)Exempted vide Sr.No 22of notifications no 12/2017-Central Tax(Rate)Dated 28<sup>th</sup>
-                        june 2017</b>,</p>
-                    <p><b>and as notified by state under GST Law.Classification of supply Exempted</b></p>
+                        june 2017, and as notified by state under GST Law.Classification of supply Exempted.</b></p>
                 </td>
                 <td style=" border:none;float: right; padding-left:196px;">
-                    <p style="padding-left: 130px">E & O.E</p>
+                    <p style="padding-left: 130px">E&O.E</p>
                     <p>Company's Bank DETAILS:</p>
                     <p>Bank Name:<b>HDFC BANK</b></p>
                     <p>A/C No.:<b>16392000002774</b></p>
                     <p>IFSC:<b>HDFC0001639</b></p>
                     <p>Branch:<b>Vivekananda nagar</b></p>
-                    <div style="border: 1px solid black; margin-right: -2px; margin-top: 10px; margin-bottom: -3px; ">
-                        <p style="margin-right: 20px; text-align: center;">for<b></b> SRI ANJANA TRANSPORT </b></h6>
+                    <div style="border: 1px solid black; margin-right: -2px; margin-top: 20px; margin-bottom: -3px; ">
+                        <p style="margin-right: 20px; text-align: center;">for</p> <p style="font-size: 10px;text-align: center;margin-bottom: 60%;"> SRI ANJANA TRANSPORT </p>
                             <br>
                             <br>
                             <br>
