--- a/server/pdfTemplates/anjana/invoice.html
+++ b/server/pdfTemplates/anjana/invoice.html
@@ -15,9 +15,6 @@
             color: green;
             text-decoration: underline;
             text-align: left;
-            margin-top: -10px;
-            margin: 0%;
-
 
         }
 
@@ -32,7 +29,7 @@
         p {
             text-align: left;
             margin: 0%;
-            font-size: 9PX;
+            font-size: 8PX;
 
         }
 
@@ -93,7 +90,7 @@
         </table>
         <div class="container">
             <div style="margin: 10px 0px;">
-                <table class="table1" style="margin-bottom:-6px !important;width: 100%">
+                <table class="table1" style="margin-bottom:-6px !important;width: 100%;line-height: 1.6;">
                     <thead>
                     <tr>
                         <th colspan="3" style="font-size: 12px">
@@ -203,7 +200,7 @@
                     </tr>
                     <tr>
                         <td>
-                            <p style="text-align: center;">{{invoiceDetails.pallets}}</p>
+                            <p style="text-align: center;">{{invoiceDetails.noOfpallets}}</p>
                         </td>
                         <td>
                             <p style="text-align: center;">By Road</p>
@@ -272,7 +269,7 @@
                             <p>Detention Charges</p>
                         </td>
                         <td colspan="">
-                            <table style="width: 103%;border-collapse: collapse;margin: -2px;">
+                            <table style="border: 1px black; width: 104.5%;border-collapse: collapse !important;margin: -2px;">
                                 <tr>
                                     <td>
                                         <p>No. Days</p>
